editor check status updated
